--- a/Python/start_and_end.ipynb
+++ b/Python/start_and_end.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 535,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 536,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 537,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 538,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 539,
    "metadata": {},
    "outputs": [
     {
@@ -309,14 +309,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 540,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "102\n"
+      "103\n"
      ]
     }
    ],
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 541,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 542,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 543,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 544,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 545,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,16 +537,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 546,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(60, 108)"
+       "(61, 59)"
       ]
      },
-     "execution_count": 374,
+     "execution_count": 546,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,16 +562,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 547,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0, 108)"
+       "(0, 94)"
       ]
      },
-     "execution_count": 373,
+     "execution_count": 547,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,16 +586,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 548,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(60, 108)"
+       "(61, 226)"
       ]
      },
-     "execution_count": 372,
+     "execution_count": 548,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 549,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,14 +644,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 550,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(67, 112)\n"
+      "(59, 98)\n"
      ]
     }
    ],
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 551,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,144 +673,255 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 552,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0      0.961411\n",
-      "1      1.037419\n",
-      "2      1.132460\n",
-      "3      1.242602\n",
-      "4      1.358513\n",
-      "5      1.464125\n",
-      "6      1.521632\n",
-      "7      1.542435\n",
-      "8      1.563315\n",
-      "9      1.571291\n",
-      "10     1.565203\n",
-      "11     1.548087\n",
-      "12     1.501942\n",
-      "13     1.418975\n",
-      "14     1.300418\n",
-      "15     1.169724\n",
-      "16     1.029401\n",
-      "17     0.882145\n",
-      "18     0.730612\n",
-      "19     0.586642\n",
-      "20     0.423438\n",
-      "21     0.259419\n",
-      "22     0.075380\n",
-      "23    -0.085493\n",
-      "24    -0.253307\n",
-      "25    -0.426146\n",
-      "26    -0.589884\n",
-      "27    -0.733021\n",
-      "28    -0.840225\n",
-      "29    -0.920299\n",
-      "30    -0.977700\n",
-      "31    -1.041791\n",
-      "32    -1.116616\n",
-      "33    -1.203293\n",
-      "34    -1.292785\n",
-      "35    -1.366096\n",
-      "36    -1.416527\n",
-      "37    -1.449949\n",
-      "38    -1.480601\n",
-      "39    -1.491997\n",
-      "40    -1.483865\n",
-      "41    -1.462940\n",
-      "42    -1.438356\n",
-      "43    -1.419281\n",
-      "44    -1.392031\n",
-      "45    -1.344803\n",
-      "46    -1.273053\n",
-      "47    -1.192165\n",
-      "48    -1.109909\n",
-      "49    -1.026032\n",
-      "50    -0.938288\n",
-      "51    -0.854546\n",
-      "52    -0.783015\n",
-      "53    -0.722231\n",
-      "54    -0.685717\n",
-      "55    -0.643858\n",
-      "56    -0.594640\n",
-      "57    -0.538332\n",
-      "58    -0.475100\n",
-      "59    -0.405580\n",
-      "60    -0.323845\n",
-      "61    -0.238451\n",
-      "62    -0.162384\n",
-      "63    -0.090683\n",
-      "64    -0.020541\n",
-      "65     0.051062\n",
-      "66     0.109125\n",
-      "67     0.179203\n",
-      "68     0.259575\n",
-      "69     0.369602\n",
-      "70     0.497312\n",
-      "71     0.648924\n",
-      "72     0.805381\n",
-      "73     0.978461\n",
-      "74     1.175539\n",
-      "75     1.413643\n",
-      "76     1.718423\n",
-      "77     2.137122\n",
-      "78     2.678578\n",
-      "79     3.306076\n",
-      "80     3.957942\n",
-      "81     4.617162\n",
-      "82     5.050852\n",
-      "83     4.880762\n",
-      "84     3.984187\n",
-      "85     2.775582\n",
-      "86     2.100301\n",
-      "87     1.577854\n",
-      "88     1.128805\n",
-      "89     0.676082\n",
-      "90     0.298652\n",
-      "91     0.068160\n",
-      "92     0.018308\n",
-      "93     0.079884\n",
-      "94     0.171662\n",
-      "95     0.229349\n",
-      "96     0.238688\n",
-      "97     0.204661\n",
-      "98     0.149417\n",
-      "99     0.097472\n",
-      "100    0.055043\n",
-      "101    0.032046\n",
-      "102    0.015462\n",
-      "103   -0.005898\n",
-      "104   -0.031696\n",
-      "105   -0.040640\n",
-      "106   -0.037207\n",
-      "107   -0.024279\n",
-      "108   -0.019433\n",
-      "109   -0.017202\n",
-      "110   -0.023547\n",
-      "111   -0.047032\n",
-      "112   -0.073659\n",
-      "113   -0.088157\n",
-      "114   -0.094944\n",
-      "115   -0.100302\n",
-      "116   -0.106470\n",
-      "117   -0.103647\n",
-      "118   -0.089428\n",
-      "119   -0.064574\n",
-      "120   -0.040738\n",
-      "121   -0.022660\n",
-      "122   -0.010672\n",
-      "123   -0.007575\n",
-      "124   -0.024645\n",
-      "125   -0.057785\n",
-      "126   -0.105381\n",
-      "127   -0.148602\n",
-      "128   -0.179637\n",
-      "129   -0.201407\n",
-      "130   -0.207800\n"
+      "0     -0.035140\n",
+      "1     -0.054451\n",
+      "2     -0.075416\n",
+      "3     -0.097420\n",
+      "4     -0.118540\n",
+      "5     -0.145670\n",
+      "6     -0.171747\n",
+      "7     -0.189646\n",
+      "8     -0.207563\n",
+      "9     -0.215342\n",
+      "10    -0.221265\n",
+      "11    -0.229410\n",
+      "12    -0.239674\n",
+      "13    -0.246642\n",
+      "14    -0.246012\n",
+      "15    -0.240996\n",
+      "16    -0.234861\n",
+      "17    -0.229741\n",
+      "18    -0.223048\n",
+      "19    -0.210916\n",
+      "20    -0.193587\n",
+      "21    -0.176169\n",
+      "22    -0.157611\n",
+      "23    -0.137184\n",
+      "24    -0.118313\n",
+      "25    -0.096002\n",
+      "26    -0.063484\n",
+      "27    -0.018678\n",
+      "28     0.029702\n",
+      "29     0.078764\n",
+      "30     0.118246\n",
+      "31     0.154215\n",
+      "32     0.196998\n",
+      "33     0.222103\n",
+      "34     0.245533\n",
+      "35     0.261589\n",
+      "36     0.264478\n",
+      "37     0.248495\n",
+      "38     0.217084\n",
+      "39     0.168955\n",
+      "40     0.101240\n",
+      "41     0.013608\n",
+      "42    -0.089865\n",
+      "43    -0.203002\n",
+      "44    -0.327428\n",
+      "45    -0.434563\n",
+      "46    -0.517528\n",
+      "47    -0.595593\n",
+      "48    -0.653782\n",
+      "49    -0.691413\n",
+      "50    -0.702926\n",
+      "51    -0.679139\n",
+      "52    -0.623652\n",
+      "53    -0.540731\n",
+      "54    -0.445286\n",
+      "55    -0.328998\n",
+      "56    -0.191389\n",
+      "57    -0.038013\n",
+      "58     0.099068\n",
+      "59     0.258475\n",
+      "60     0.462477\n",
+      "61     0.678929\n",
+      "62     0.911255\n",
+      "63     1.150382\n",
+      "64     1.416751\n",
+      "65     1.784732\n",
+      "66     2.272932\n",
+      "67     2.842046\n",
+      "68     3.367435\n",
+      "69     3.657256\n",
+      "70     3.626526\n",
+      "71     3.378999\n",
+      "72     2.976653\n",
+      "73     2.461719\n",
+      "74     1.962844\n",
+      "75     1.554908\n",
+      "76     1.184291\n",
+      "77     1.000183\n",
+      "78     0.908397\n",
+      "79     0.874359\n",
+      "80     0.852188\n",
+      "81     0.825349\n",
+      "82     0.762241\n",
+      "83     0.694472\n",
+      "84     0.641198\n",
+      "85     0.583582\n",
+      "86     0.533384\n",
+      "87     0.493910\n",
+      "88     0.444936\n",
+      "89     0.389585\n",
+      "90     0.336976\n",
+      "91     0.276502\n",
+      "92     0.234806\n",
+      "93     0.215508\n",
+      "94     0.212057\n",
+      "95     0.204781\n",
+      "96     0.194384\n",
+      "97     0.185552\n",
+      "98     0.172522\n",
+      "99     0.146546\n",
+      "100    0.114163\n",
+      "101    0.090153\n",
+      "102    0.068275\n",
+      "103    0.060812\n",
+      "104    0.049240\n",
+      "105    0.034108\n",
+      "106    0.026935\n",
+      "107    0.018956\n",
+      "108    0.014848\n",
+      "109    0.008833\n",
+      "110    0.000063\n",
+      "111   -0.016155\n",
+      "112   -0.039311\n",
+      "113   -0.059702\n",
+      "114   -0.073291\n",
+      "115   -0.081740\n",
+      "116   -0.095493\n",
+      "117   -0.112028\n",
+      "118   -0.122217\n",
+      "119   -0.137235\n",
+      "120   -0.153461\n",
+      "121   -0.177434\n",
+      "122   -0.197171\n",
+      "123   -0.212408\n",
+      "124   -0.219939\n",
+      "125   -0.219417\n",
+      "126   -0.221227\n",
+      "127   -0.236486\n",
+      "128   -0.260752\n",
+      "129   -0.285201\n",
+      "130   -0.291114\n",
+      "131   -0.296487\n",
+      "132   -0.309547\n",
+      "133   -0.333396\n",
+      "134   -0.363018\n",
+      "135   -0.398315\n",
+      "136   -0.433492\n",
+      "137   -0.452504\n",
+      "138   -0.459663\n",
+      "139   -0.470039\n",
+      "140   -0.489541\n",
+      "141   -0.519548\n",
+      "142   -0.548886\n",
+      "143   -0.569225\n",
+      "144   -0.586223\n",
+      "145   -0.603916\n",
+      "146   -0.619203\n",
+      "147   -0.629534\n",
+      "148   -0.637135\n",
+      "149   -0.647663\n",
+      "150   -0.655682\n",
+      "151   -0.672024\n",
+      "152   -0.690133\n",
+      "153   -0.701703\n",
+      "154   -0.707133\n",
+      "155   -0.710776\n",
+      "156   -0.717586\n",
+      "157   -0.725381\n",
+      "158   -0.732809\n",
+      "159   -0.735995\n",
+      "160   -0.736633\n",
+      "161   -0.732686\n",
+      "162   -0.724148\n",
+      "163   -0.715634\n",
+      "164   -0.709666\n",
+      "165   -0.703473\n",
+      "166   -0.695570\n",
+      "167   -0.684169\n",
+      "168   -0.672273\n",
+      "169   -0.660351\n",
+      "170   -0.646227\n",
+      "171   -0.632883\n",
+      "172   -0.618534\n",
+      "173   -0.603563\n",
+      "174   -0.586118\n",
+      "175   -0.565293\n",
+      "176   -0.544426\n",
+      "177   -0.524659\n",
+      "178   -0.504653\n",
+      "179   -0.485158\n",
+      "180   -0.465172\n",
+      "181   -0.443998\n",
+      "182   -0.421069\n",
+      "183   -0.397138\n",
+      "184   -0.376760\n",
+      "185   -0.358669\n",
+      "186   -0.336093\n",
+      "187   -0.316924\n",
+      "188   -0.291582\n",
+      "189   -0.264415\n",
+      "190   -0.240256\n",
+      "191   -0.218750\n",
+      "192   -0.201729\n",
+      "193   -0.187130\n",
+      "194   -0.173974\n",
+      "195   -0.160738\n",
+      "196   -0.149288\n",
+      "197   -0.139997\n",
+      "198   -0.133212\n",
+      "199   -0.127704\n",
+      "200   -0.118241\n",
+      "201   -0.103253\n",
+      "202   -0.090774\n",
+      "203   -0.080868\n",
+      "204   -0.073784\n",
+      "205   -0.068725\n",
+      "206   -0.064267\n",
+      "207   -0.058767\n",
+      "208   -0.053925\n",
+      "209   -0.050682\n",
+      "210   -0.051077\n",
+      "211   -0.054888\n",
+      "212   -0.061600\n",
+      "213   -0.067217\n",
+      "214   -0.069254\n",
+      "215   -0.068960\n",
+      "216   -0.066747\n",
+      "217   -0.061866\n",
+      "218   -0.058421\n",
+      "219   -0.056871\n",
+      "220   -0.055541\n",
+      "221   -0.053068\n",
+      "222   -0.050296\n",
+      "223   -0.048087\n",
+      "224   -0.047008\n",
+      "225   -0.047769\n",
+      "226   -0.049319\n",
+      "227   -0.049802\n",
+      "228   -0.049617\n",
+      "229   -0.049774\n",
+      "230   -0.051012\n",
+      "231   -0.050536\n",
+      "232   -0.049070\n",
+      "233   -0.046583\n",
+      "234   -0.044942\n",
+      "235   -0.043331\n",
+      "236   -0.042272\n",
+      "237   -0.042943\n",
+      "238   -0.045245\n",
+      "239   -0.048261\n",
+      "240   -0.046808\n",
+      "241   -0.041568\n"
      ]
     }
    ],
@@ -820,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 553,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 554,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 567,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 510,
+   "execution_count": 556,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 517,
+   "execution_count": 557,
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +1056,7 @@
        "(73, 125)"
       ]
      },
-     "execution_count": 517,
+     "execution_count": 557,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -956,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 518,
+   "execution_count": 558,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +1076,7 @@
        "(73, 125)"
       ]
      },
-     "execution_count": 518,
+     "execution_count": 558,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 519,
+   "execution_count": 559,
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +1096,7 @@
        "(0, 146)"
       ]
      },
-     "execution_count": 519,
+     "execution_count": 559,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 514,
+   "execution_count": 560,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": 561,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1198,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 516,
+   "execution_count": 562,
    "metadata": {},
    "outputs": [
     {
@@ -1207,7 +1318,7 @@
        "73"
       ]
      },
-     "execution_count": 516,
+     "execution_count": 562,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1218,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 522,
+   "execution_count": 563,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1227,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 531,
+   "execution_count": 564,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1238,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 533,
+   "execution_count": 565,
    "metadata": {},
    "outputs": [
     {
@@ -1264,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 534,
+   "execution_count": 566,
    "metadata": {},
    "outputs": [
     {
@@ -1286,6 +1397,28 @@
     "plt.ylabel(\"Velocity\")\n",
     "plt.xlabel(\"Time\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 568,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(73, 125)"
+      ]
+     },
+     "execution_count": 568,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filepath = \"../Data/Combined/VOL_26.csv\"\n",
+    "data = pd.read_csv(filepath, index_col=False)\n",
+    "start_end_FHD_BHD_4(data)"
    ]
   }
  ],
